confs/prometheus/grafana_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.atweek.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
     - grafana.atweek.work
    secretName: ssl-cert-production
